# game-of-life-playground

./: .gitignore  README.md
_benchmark/: benchmark.py  run.ps1
cpp/GameOfLife/: GameOfLife.sln
cpp/GameOfLife/GameOfLifeConsole/: GameOfLifeConsole.vcxproj  GameOfLifeConsole.vcxproj.filters  console_runner.cpp  console_runner.h  main.cpp
cpp/GameOfLife/GameOfLifeEngine/: GameOfLifeEngine.vcxproj  GameOfLifeEngine.vcxproj.filters  cell.cpp  cell.h  life_engine.cpp  life_engine.h
csharp/GameOfLife/: GameOfLife.sln
csharp/GameOfLife/GameOfLife/: Cell.cs  GameOfLife.csproj  ILifeEngine.cs  LifeEngine.cs  RustLifeEngine.cs
csharp/GameOfLife/GameOfLife/RustBindings/: CellsIteratorHandle.cs  EngineHandle.cs  EngineNativeMethods.cs  (+1 more)
csharp/GameOfLife/GameOfLifeConsole/: ConsoleRunner.cs  GameOfLifeConsole.csproj  Options.cs  Program.cs
csharp/GameOfLife/GameOfLifeEngine/: Cell.cs  GameOfLifeEngine.csproj  LifeEngine.cs  RustLifeEngine.cs
csharp/GameOfLife/GameOfLifePixel/: Game.cs  GameConfig.cs  GameOfLifePixel.csproj  Program.cs
js/: index.html  script.js  style.css
rust/: compute.wgsl
rust/game-of-life/: Cargo.toml
rust/game-of-life-console/: Cargo.toml
rust/game-of-life-console/src/: lib.rs  main.rs
rust/game-of-life-engine/: Cargo.toml
rust/game-of-life-engine/src/: lib.rs
rust/game-of-life-ffi/: Cargo.toml
rust/game-of-life-ffi/src/: lib.rs
rust/game-of-life-gpu/: Cargo.toml
rust/game-of-life-gpu/src/: compute.wgsl  lib.rs
rust/game-of-life-pixel/: Cargo.toml
rust/game-of-life-pixel/src/: lib.rs  main.rs
rust/game-of-life-wasm/: Cargo.toml
rust/game-of-life-wasm/src/: lib.rs
rust/game-of-life/src/: lib.rs  main.rs
(+2 files in other folders)
