[package]
name = "game-of-life-console"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
game-of-life-engine = { path = "../game-of-life-engine" }
game-of-life-gpu = { path = "../game-of-life-gpu", optional = true }

[features]
gpu = ["dep:game-of-life-gpu"]
