[package]
name = "game-of-life-gpu"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "24.0.0"
bytemuck = { version = "1.21.0", features = ["derive"] }
pollster = "0.4.0"
game-of-life-engine = { path = "../game-of-life-engine" }
rand = "0.10.0"
log = "0.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
