[package]
name = "game-of-life-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
game-of-life-engine = { path = "../game-of-life-engine" }
js-sys = "0.3.91"
wasm-bindgen = "0.2.114"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4.2", features = ["wasm_js"] }
